--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar__container">
     <div class="navbar__menu">
-        <div routerLink="/" *ngIf="role === 'admin' || role === 'supervisor'">Dashboard</div>
+        <div routerLink="/dashboard" *ngIf="role === 'admin' || role === 'supervisor'">Dashboard</div>
         <div routerLink="/user" *ngIf="role === 'admin'">User</div>
         <div routerLink="/product" (click)="onProduct()" *ngIf="role === 'admin' || role ==='supervisor' || role ==='sales person'">
             Product</div>
