--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,6 +12,6 @@
             placeholder="Password" required />
         <button class="bg-dark button" [disabled]="loginForm.invalid" type="submit">Submit
         </button>
-        <div style="color:white">New User <span routerLink="/register" class="text-info">Register</span></div>
+        <div style="color:white">New User <a routerLink="/register" class="text-info">Register</a></div>
     </form>
 </div>
