--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -25,6 +25,6 @@
         <button class="bg-dark button"
                 [disabled]="registerForm.invalid"
                 type="submit">Submit</button>
-        <div>Already have an account <span routerLink="/login" class="text-primary">login</span></div>
+        <div>Already have an account <a routerLink="/login" class="text-primary">login</a></div>
     </form>>
 </div>
